# capnwebcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: nlohmann_json.cmake  uwebsockets.cmake
examples/: CMakeLists.txt
examples/batch-pipelining/: CMakeLists.txt  client.mjs  index.html  server.cpp
examples/helloworld/: CMakeLists.txt  client.mjs  index.html  server.cpp
examples/messageport/: CMakeLists.txt  server.cpp
examples/server-calls-client/: CMakeLists.txt  demo.cpp
examples/websocket-callback/: CMakeLists.txt  client.mjs  index.html  server.cpp
include/capnwebcpp/: batch.h  capnwebcpp.hpp  client_api.h  client_stub.h  client_ws.h  endpoint.h  export_id.h  export_target.h  file_endpoint.h  file_service.h  file_service.hpp  logging.h  protocol.h  rpc_endpoint.h  rpc_service.hpp  rpc_session.h  rpc_session.hpp  rpc_target.h  serialize.h  session_state.h  stub_hook.h  transport.h
include/capnwebcpp/transports/: accum_transport.h  message_port_transport.h  uws_websocket_client.h  uws_websocket_transport.h
interop/: package-lock.json  package.json  vitest.config.mjs
interop/scripts/: server.js
interop/test/: batch.spec.mjs  batch_release.spec.mjs  setup.mjs  ws.spec.mjs
src/: CMakeLists.txt  capnwebcpp.cpp  file_service.cpp  protocol.cpp  rpc_service.cpp  rpc_session.cpp  serialize.cpp
tests/: CMakeLists.txt  test_abort.cpp  test_batch.cpp  test_batch_export_capture_get.cpp  test_client_call.cpp  test_cpp_client.cpp  test_drain_stats.cpp  test_import_promise.cpp  test_import_stub.cpp  test_protocol.cpp  test_redaction.cpp  test_reexport.cpp  test_reexport_aggregate_release.cpp  test_reexport_multi.cpp  test_remap_captures.cpp  test_remap_promise_capture.cpp  test_rpc.cpp  test_serialize_hardening.cpp  test_server_call_api.cpp  test_transport_abort.cpp
